--- a/package.json
+++ b/package.json
@@ -22,9 +22,14 @@
   },
   "dependencies": {
     "@aws-cdk/aws-apigateway": "^1.115.0",
-    "@aws-cdk/aws-sns": "1.115.0",
-    "@aws-cdk/aws-sns-subscriptions": "1.115.0",
-    "@aws-cdk/aws-sqs": "1.115.0",
-    "@aws-cdk/core": "1.115.0"
+    "@aws-cdk/aws-certificatemanager": "^1.115.0",
+    "@aws-cdk/aws-ec2": "^1.115.0",
+    "@aws-cdk/aws-elasticloadbalancingv2": "^1.115.0",
+    "@aws-cdk/aws-iam": "^1.115.0",
+    "@aws-cdk/aws-lambda": "^1.115.0",
+    "@aws-cdk/aws-route53": "^1.115.0",
+    "@aws-cdk/aws-route53-targets": "^1.115.0",
+    "@aws-cdk/core": "1.115.0",
+    "@aws-cdk/custom-resources": "^1.115.0"
   }
 }
