--- a/package.json
+++ b/package.json
@@ -10,26 +10,24 @@
     "test": "jest",
     "cdk": "cdk"
   },
+  "peerDependencies": {
+    "aws-cdk-lib": "^2.56.0",
+    "constructs": "10.1.197"
+  },
   "devDependencies": {
     "@aws-cdk/assert": "1.115.0",
     "@types/jest": "^26.0.10",
     "@types/node": "10.17.27",
     "aws-cdk": "1.115.0",
+    "aws-cdk-lib": "^2.56.0",
+    "constructs": "10.1.197",
     "jest": "^26.4.2",
     "ts-jest": "^26.2.0",
     "ts-node": "^9.0.0",
     "typescript": "~3.9.7"
   },
   "dependencies": {
-    "@aws-cdk/aws-apigateway": "^1.115.0",
-    "@aws-cdk/aws-certificatemanager": "^1.115.0",
-    "@aws-cdk/aws-ec2": "^1.115.0",
-    "@aws-cdk/aws-elasticloadbalancingv2": "^1.115.0",
-    "@aws-cdk/aws-iam": "^1.115.0",
-    "@aws-cdk/aws-lambda": "^1.115.0",
-    "@aws-cdk/aws-route53": "^1.115.0",
-    "@aws-cdk/aws-route53-targets": "^1.115.0",
-    "@aws-cdk/core": "1.115.0",
-    "@aws-cdk/custom-resources": "^1.115.0"
+    "aws-cdk-lib": "^2.56.0",
+    "constructs": "10.1.197"
   }
 }
